--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -20,13 +20,13 @@
 <body>
 <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="/buyTicket">Cinema</a>
+        <a class="navbar-brand" href="/selectFilm">Cinema</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-item nav-link" th:href="@{/buyTicket}">Купить билет</a>
+                <a class="nav-item nav-link" th:href="@{/selectFilm}">Купить билет</a>
                 <a class="nav-item nav-link" th:if="${user.name != 'guest'}" th:href="@{/myTickets}">Мои билеты</a>
                 <a class="nav-item nav-link active" href="/registration">Регистрация<span class="sr-only">(current)</span></a>
                 <a class="nav-item nav-link" th:if="${user.name == 'guest'}" th:href="@{/loginPage}">
